--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: cpp
-env: OMP_NUM_THREADS=4
+env: 
+    global:
+        - OMP_NUM_THREADS=4
+before_install:
+    - sudo apt-get update
+    - sudo apt-get install -y bjam=03.1.18
+    - sudo apt-get install -y python=2.7
+    - sudo apt-get install -y libsdl1.2-dev libsdl-image1.2-dev
+    - sudo apt-get install -y libpng++-dev=1.4
+    - sudo apt-get install -y zlib1g-dev=1.2.5
+    - sudo apt-get install -y libgl1-mesa-glx
 compiler:
     - clang
     - gcc
+script:
+    bjam -j3
