--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
     - sudo apt-get install -y libpng++-dev=1.4
     - sudo apt-get install -y zlib1g-dev=1.2.5
     - sudo apt-get install -y libgl1-mesa-glx
-compiler:
-    - clang
-    - gcc
+#compiler:
+#    - clang
+#    - gcc
 script:
     bjam -j3
