removed outdated dependencies and added required dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,8 +16,6 @@ include_directories(/usr/include
 set (LIB_PATH /usr/lib)
 find_library (PNG png ${LIB_PATH})
 find_library (TCOD tcod ${LIB_PATH})
-find_library (TCOD tcodgui ${LIB_PATH})
-find_library (TCOD tcodxx ${LIB_PATH})
 
 find_package (SDL)
 find_package (SDL_image)
@@ -52,7 +50,7 @@ include_directories (${Boost_INCLUDE_DIRS})
 link_directories (${Boost_LIBRARY_DIRS})
 
 # link the executable to the libraries
-target_link_libraries (goblincamp ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} GL png SDL SDL_image tcod tcodxx tcodgui z python-modules)
+target_link_libraries (goblincamp ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} GL png SDL SDL_image tcod z python-modules pthread)
 
 # have to use c++11 or gnu++11, because lambda expressions
 set_target_properties (goblincamp PROPERTIES COMPILE_FLAGS "-std=gnu++11 -Wall")
