--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: cpp
 env: 
     global:
         - OMP_NUM_THREADS=4
+	- C_INCLUDE_PATH=$C_INCLUDE_PATH:/usr/local/include/libtcod
+   	- LD_LIBRARY_PATH=/usr/local/lib
 before_install:
     - sudo apt-get update
     - sudo apt-get install -y libboost1.54-tools-dev
@@ -9,8 +11,21 @@ before_install:
     - sudo apt-get install -y libpng++-dev
     - sudo apt-get install -y zlib1g-dev
     - sudo apt-get install -y libgl1-mesa-glx
+    - sudo apt-get install -y libglew-dev
+    - sudo apt-get install -y freeglut3-dev
+    - sudo apt-get install -y libsdl2-dev
+    - sudo apt-get install -y scon
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/tests
+    - sudo apt-get update
+    - sudo apt-get install -y g++-5 gcc-5
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5 
+before_script:
+    - wget https://github.com/libtcod/libtcod/archive/1.9.0.zip -O libtcod
+    - cd libtcod/build/scons/
+    - scons develop
 compiler:
     - gcc
     - clang
 script:
-    - bjam -j3
+    - cmake .
+    - make
