--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: cpp
 env: 
-    global:
-        - OMP_NUM_THREADS=4
-	- C_INCLUDE_PATH=$C_INCLUDE_PATH:/usr/local/include/libtcod
-   	- LD_LIBRARY_PATH=/usr/local/lib
+    - OMP_NUM_THREADS=4
+    - C_INCLUDE_PATH=$C_INCLUDE_PATH:/usr/local/include/libtcod
+    - LD_LIBRARY_PATH=/usr/local/lib
 before_install:
     - sudo apt-get update
     - sudo apt-get install -y libboost1.54-tools-dev
@@ -14,7 +13,7 @@ before_install:
     - sudo apt-get install -y libglew-dev
     - sudo apt-get install -y freeglut3-dev
     - sudo apt-get install -y libsdl2-dev
-    - sudo apt-get install -y scon
+    - sudo apt-get install -y scons
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/tests
     - sudo apt-get update
     - sudo apt-get install -y g++-5 gcc-5
