--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 before_install:
     - sudo apt-get update
     - sudo apt-get install -y libboost1.54-tools-dev
+    - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev
     - sudo apt-get install -y libsdl1.2-dev libsdl-image1.2-dev
     - sudo apt-get install -y libpng++-dev
     - sudo apt-get install -y zlib1g-dev
