--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
     - sudo apt-get install -y freeglut3-dev
     - sudo apt-get install -y libsdl2-dev
     - sudo apt-get install -y scons
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/tests
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
     - sudo apt-get update
     - sudo apt-get install -y g++-5 gcc-5
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5 
