--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ before_install:
     - sudo apt-get install -y g++-5 gcc-5
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5 
 before_script:
-    - wget https://github.com/libtcod/libtcod/archive/1.9.0.zip -O libtcod
-    - cd libtcod/build/scons/
+    - wget https://github.com/libtcod/libtcod/archive/1.9.0.zip -O libtcod.zip
+    - unzip libtcod.zip
+    - cd libtcod/build/scons
     - scons develop
 compiler:
     - gcc
