--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,21 @@ before_install:
     - sudo apt-get install -y libgl1-mesa-glx
     - sudo apt-get install -y libglew-dev
     - sudo apt-get install -y freeglut3-dev
-    - sudo apt-get install -y libsdl2-dev
     - sudo apt-get install -y scons
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update
     - sudo apt-get install -y g++-5 gcc-5
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5 
 before_script:
+    - curl -o sdl.tar.gz http://hg.libsdl.org/SDL/archive/007dfe83abf8.tar.gz
+    - tar -xf sdl.tar.gz
+    - cd SDL-007dfe83abf8/
+    - mkdir -p build
+    - cd build
+    - ../configure
+    - make
+    - sudo make install
+    - cd ../..
     - wget https://github.com/libtcod/libtcod/archive/1.9.0.zip -O libtcod-1.9.0.zip
     - unzip libtcod-1.9.0.zip
     - cd libtcod-1.9.0/build/scons
