--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
         - LD_LIBRARY_PATH=/usr/local/lib
 before_install:
     - sudo apt-get update
-    - sudo apt-get install -y libboost1.54-dev
+    - sudo apt-get install -y libboost1.54-all-dev
     - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev
     - sudo apt-get install -y libsdl1.2-dev libsdl-image1.2-dev
     - sudo apt-get install -y libpng++-dev
