--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
     - sudo apt-get install -y libboost1.54-all-dev
     - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev
     - sudo apt-get install -y libsdl1.2-dev libsdl-image1.2-dev
+    - sudo apt-get install -y autoconf automake libtool libasound2-dev libpulse-dev libaudio-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxi-dev libxinerama-dev libxxf86vm-dev libxss-dev libesd0-dev libdbus-1-dev libudev-dev libgles1-mesa-dev
     - sudo apt-get install -y libpng++-dev
     - sudo apt-get install -y zlib1g-dev
     - sudo apt-get install -y libgl1-mesa-glx
@@ -32,8 +33,11 @@ before_script:
     - cd ../..
     - wget https://github.com/libtcod/libtcod/archive/1.9.0.zip -O libtcod-1.9.0.zip
     - unzip libtcod-1.9.0.zip
-    - cd libtcod-1.9.0/build/scons
-    - scons develop
+    - cd libtcod-1.9.0/build/autotools
+    - autoreconf -i
+    - ./configure CFLAGS='-O2'
+    - make
+    - sudo make install
     - cd ../../..
 compiler:
     - gcc
