--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
 
 before_install:
     - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
-    - curl https://github.com/libtcod/libtcod/archive/1.9.0.zip -O libtcod-1.9.0.zip
+    - curl https://github.com/libtcod/libtcod/archive/1.9.0.zip -L -o libtcod-1.9.0.zip
     - unzip libtcod-1.9.0.zip
     - cd libtcod-1.9.0/build/autotools
     - autoreconf -i
