--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,16 @@ env:
 
 before_install:
     - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8 
+    - curl -o sdl.tar.gz http://hg.libsdl.org/SDL/archive/007dfe83abf8.tar.gz
+    - tar -xf sdl.tar.gz
+    - cd SDL-007dfe83abf8/
+    - mkdir -p build
+    - cd build
+    - ../configure
+    - make
+    - sudo make install
+    - cd ../..
     - curl https://github.com/libtcod/libtcod/archive/1.9.0.zip -L -o libtcod-1.9.0.zip
     - unzip libtcod-1.9.0.zip
     - cd libtcod-1.9.0/build/autotools
@@ -20,7 +30,6 @@ before_install:
     - make
     - sudo make install
     - cd ../../..
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8 
 before_script:
     # - curl -o sdl.tar.gz http://hg.libsdl.org/SDL/archive/007dfe83abf8.tar.gz
     # - tar -xf sdl.tar.gz
@@ -67,7 +76,6 @@ jobs:
               - libgl1-mesa-glx
               - libglew-dev
               - freeglut3-dev
-              - libsdl2-dev
               - g++-8 gcc-8
         script:
           - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8 
