--- a/.travis.yml
+++ b/.travis.yml
@@ -79,4 +79,4 @@ jobs:
               - g++-8 gcc-8
         script:
           - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8 
-          - if [ ${COVERITY_SCAN_BRANCH} != 1 ]; then cmake .;make; fi
+          - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then cmake .;make; fi
