--- a/.travis.yml
+++ b/.travis.yml
@@ -48,3 +48,6 @@ jobs:
               - g++-8 gcc-8
         script:
           - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then cmake .;make; fi
+        after_script:
+          - cd src
+          - ./goblincamp
