--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ jobs:
               - g++-8 gcc-8
         script:
           - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then cmake .; make; sudo make install; fi
+          - ls -al
+          - pwd
           - tar -cf release.tar pkg
 deploy:
   provider: releases
