try to unfuck the boost python shut

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,12 @@
 # TODO: blame
 
 cmake_minimum_required (VERSION 2.6)
-set (CMAKE_CXX_STANDARD 17)
-set(CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+
+## Can't do this while boost is involved, we set it individually on everything
+## without problematic boost includes
+#set (CMAKE_CXX_STANDARD 17)
+#set(CXX_STANDARD_REQUIRED ON)
+#set(CMAKE_CXX_EXTENSIONS OFF)
 
 # TODO: configure depending on OS
 set (CMAKE_INSTALL_PREFIX "./pkg/usr")
